# gitops-app

./: .gitignore  Dockerfile  README.md  TODO.md  pyproject.toml  requirements.txt
.github/workflows/: build-push-docker.yaml  update-k8s-manifest.yaml
src/app/: app.py  main.py
src/gitops_app.egg-info/: PKG-INFO  SOURCES.txt
