[project]
name = "gitops-app"
version = "0.0.1"
authors = [
  { name="Niels Hoogeveen", email="hoogeveen.n.a@gmail.com" },
]
description = "Code to deploy gitops api app"
readme = "README.md"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json"]
